# VdbPlayground

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  main.cpp  vcpkg.json
application/: CMakeLists.txt  application.h
cmake/modules/: SetupConan.cmake
conan/: conanfile.py
lib/: CMakeLists.txt
lib/Core/: CMakeLists.txt
lib/Core/Core/: Model.cpp  Model.h  ModelCollection.cpp  ModelCollection.h  ModelLoader.cpp  ModelLoader.h
lib/LevelSetOperators/: CMakeLists.txt
lib/LevelSetOperators/LevelSetOperators/: MeanFluxOp.h
lib/MeshFileReaders/: CMakeLists.txt
lib/MeshFileReaders/MeshFileReaders/: StlFileReader.cpp  StlFileReader.h
lib/Morphology/: CMakeLists.txt
lib/Morphology/Morphology/: MeanFlux.h
lib/Morphology/src/: MeanFlux.h
lib/RayTracer/: CMakeLists.txt
lib/RayTracer/RayTracer/: Bvh.cpp  Bvh.h  Bvh.t.cpp  Common.cpp  Common.h  Film.cpp  Film.h  Film.t.cpp  Geometry.cpp  Geometry.h  GeometryRayIntersector.cpp  GeometryRayIntersector.h  Light.h  Material.cpp  Material.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  RayTracer.t.cpp  Scene.cpp  Scene.h  Scene.t.cpp  SceneEntity.cpp  SceneEntity.h  SceneEntity.t.cpp
lib/SkeletonGenerators/: CMakeLists.txt
lib/SkeletonGenerators/SkeletonGenerators/: GrassfireDivergenceSkeleton.cpp  GrassfireDivergenceSkeleton.h
lib/Solvers/: CMakeLists.txt
lib/Solvers/Solvers/: Multigrid.cpp  Multigrid.h  Multigrid.t.cpp
lib/UI/: CMakeLists.txt
lib/UI/UI/: UiStructure.cpp  UiStructure.h  UserInterface.cpp  UserInterface.h  ui_structure.cpp  ui_structure.h  user_interface.cpp
lib/morphology/: CMakeLists.txt
lib/morphology/morphology/: mean_flux.h
